# Necrowarp

./: .clangd  .gitignore  .gitmodules  AStar.cs  CMakeLists.txt  Grid.cs  Map.cs  Necrowarp.csproj  Necrowarp.sln  Program.cs  meson.build  native.ini
Entities/: Actor.cs  Adventurer.cs  Necromancer.cs  Skeleton.cs
cross/: x86_64-linux-debug.ini  x86_64-linux-release.ini  x86_64-linux.ini  x86_64-windows-debug.ini  x86_64-windows-release.ini  x86_64-windows.ini
inc/: meson.build
inc/necrowarp/: animation.hpp  cell.hpp  command_parser.hpp  commands.hpp  commands.tpp  constants.hpp  dimensions.hpp  entities.hpp  entities.tpp  entity_buffer.hpp  entity_buffer.tpp  entity_command.hpp  entity_state.hpp  entity_state.tpp  game.hpp  game.tpp  game_state.hpp  globals.hpp  literature.hpp  literature.tpp  object_buffer.hpp  object_buffer.tpp  object_state.hpp  object_state.tpp  objects.hpp  objects.tpp  patronage.hpp  patronage.tpp  phase.hpp  scorekeeper.hpp  stats.hpp  tribulation.hpp  tutorial.hpp  ui.hpp  ui_state.hpp  unified_map_renderer.hpp
inc/necrowarp/commands/: binary.hpp  binary.tpp  command.hpp  ternary.hpp  ternary.tpp  unary.hpp  unary.tpp
inc/necrowarp/commands/binary/: annihilate.hpp  annihilate.tpp  anoint.hpp  anoint.tpp  batter.hpp  batter.tpp  calcify.hpp  calcify.tpp  calcitic_invocation.hpp  calcitic_invocation.tpp  cerebral_invocation.hpp  cerebral_invocation.tpp  clash.hpp  clash.tpp  consume.hpp  consume.tpp  consume_warp.hpp  consume_warp.tpp  depart.hpp  depart.tpp  descend.hpp  descend.tpp  devour.hpp  devour.tpp  eradicate.hpp  eradicate.tpp  exorcise.hpp  exorcise.tpp  galvanic_invocation.hpp  galvanic_invocation.tpp  graze.hpp  graze.tpp  infernal_invocation.hpp  infernal_invocation.tpp  loose.hpp  loose.tpp  move.hpp  move.tpp  nuzzle.hpp  nuzzle.tpp  (+22 more)
inc/necrowarp/commands/ternary/: lunge.hpp  lunge.tpp
inc/necrowarp/commands/unary/: calamitous_retaliation.hpp  calamitous_retaliation.tpp  chaotic_warp.hpp  chaotic_warp.tpp  eviscerate.hpp  eviscerate.tpp  incorporealize.hpp  incorporealize.tpp  knock.hpp  knock.tpp  meditate.hpp  meditate.tpp  metabolise.hpp  metabolise.tpp  mitose.hpp  mitose.tpp  necromantic_ascendance.hpp  necromantic_ascendance.tpp  nock.hpp  nock.tpp  random_warp.hpp  random_warp.tpp  repulse.hpp  repulse.tpp  shed.hpp  shed.tpp  suicide.hpp  suicide.tpp  wander.hpp  wander.tpp
inc/necrowarp/constants/: bindings.hpp  characters.hpp  colors.hpp  enums.hpp  enums.tpp  glyphs.hpp  indices.hpp
inc/necrowarp/constants/enums/: affliction.hpp  affliction.tpp  base.hpp  bloomage.hpp  bloomage.tpp  breed.hpp  breed.tpp  bulk.hpp  bulk.tpp  cell.hpp  death.hpp  death.tpp  decay.hpp  decay.tpp  demeanor.hpp  demeanor.tpp  fluid.hpp  fluid.tpp  galvanisation.hpp  galvanisation.tpp  grimoire.hpp  grimoire.tpp  plurality.hpp  shackle.hpp  shackle.tpp  species.hpp  species.tpp  steam.hpp  steam.tpp
inc/necrowarp/dimensions/: ancient_vault.hpp  dimension.hpp  overworld.hpp  sudokras.hpp  tribulation.hpp  underworld.hpp  voitykras.hpp  yyndikras.hpp
inc/necrowarp/entities/: animate.hpp  animate.tpp  entity.hpp  entity.tpp  entity_state.tpp  evil.hpp  evil.tpp  flesh_golem.hpp  good.hpp  good.tpp  inanimate.hpp  inanimate.tpp  neutral.hpp  neutral.tpp
inc/necrowarp/entities/animate/: evil.hpp  evil.tpp  good.hpp  good.tpp
inc/necrowarp/entities/evil/: animated_suit.hpp  animated_suit.tpp  bloodhound.hpp  bloodhound.tpp  bonespur.hpp  bonespur.tpp  cultist.hpp  cultist.tpp  death_knight.hpp  death_knight.tpp  exalted.hpp  exalted.tpp  flesh_golem.hpp  flesh_golem.tpp  lesser.hpp  lesser.tpp  player.hpp  player.tpp  skeleton.hpp  skeleton.tpp  wraith.hpp  wraith.tpp
inc/necrowarp/entities/good/: adventurer.hpp  adventurer.tpp  banner_bearer.hpp  banner_bearer.tpp  battle_monk.hpp  battle_monk.tpp  berserker.hpp  berserker.tpp  hexeater.hpp  hexeater.tpp  mansling.hpp  mansling.tpp  medicus.hpp  medicus.tpp  mercenary.hpp  mercenary.tpp  mist_lady.hpp  mist_lady.tpp  paladin.hpp  paladin.tpp  priest.hpp  priest.tpp  ranger.hpp  ranger.tpp  skulker.hpp  skulker.tpp  thetwo.hpp  thetwo.tpp
inc/necrowarp/entities/inanimate/: ladder.hpp  ladder.tpp  skull.hpp  skull.tpp
inc/necrowarp/entities/neutral/: fauna.hpp  fauna.tpp  plonzo.hpp  plonzo.tpp  thetwo.hpp  thetwo.tpp
inc/necrowarp/objects/: catalyst.hpp  catalyst.tpp  construct.hpp  construct.tpp  debris.hpp  debris.tpp  locomotion.hpp  locomotion.tpp  object.hpp  object.tpp
inc/necrowarp/objects/catalyst/: bones.hpp  bones.tpp  cerebra.hpp  cerebra.tpp  flesh.hpp  flesh.tpp  metal.hpp  metal.tpp  skull.hpp  skull.tpp
inc/necrowarp/objects/construct/: pedestal.hpp  pedestal.tpp
inc/necrowarp/objects/debris/: arrow.hpp  arrow.tpp  flora.hpp  flora.tpp
inc/necrowarp/objects/locomotion/: crevice.hpp  crevice.tpp  gateway.hpp  gateway.tpp  ladder.hpp  ladder.tpp  portal.hpp  portal.tpp
inc/necrowarp/tutorial/: subtrack.hpp  track.hpp
inc/necrowarp/tutorial/subtrack/: chaotic_warp.hpp  common.hpp  random_warp.hpp  random_warp.tpp
inc/necrowarp/ui/: base.hpp  box.hpp  button.hpp  command_bar.hpp  composite.hpp  dropdown.hpp  image.hpp  label.hpp  minimap.hpp  phases.hpp  status.hpp
inc/necrowarp/ui/phases/: credits.hpp  exiting.hpp  game_over.hpp  paused.hpp  (+4 more)
inl/necrowarp/: entity_state.tpp
inl/necrowarp/entities/: flesh_golem.tpp  player.tpp  priest.tpp  wraith.tpp
install/linux/x86_64/: liblzma.so.5  libpthread.so.0  necrowarp
res/sfx/clips/: divine_intervention.flac
src/: program.cpp
src/necrowarp/: entities.hpp  entity_state.cpp  entity_state.hpp  entity_state.tpp  game.hpp  game_state.hpp  globals.hpp  ui_state.hpp
src/necrowarp/entities/: adventurer.cpp  adventurer.hpp  entity.hpp  flesh_golem.hpp  ladder.cpp  ladder.hpp  paladin.cpp  paladin.hpp  player.hpp  player.tpp  priest.hpp  priest.tpp  skeleton.cpp  skeleton.hpp  skull.cpp  skull.hpp  wraith.hpp
subprojects/: libbleak.wrap
subprojects/libbleak/: bleak.hpp  meson.build
subprojects/libbleak/bleak/: cell.hpp  cursor.hpp  mixer.hpp  rect.hpp  sound.hpp  subsystem.hpp  window.hpp  zone.hpp
(+66 files in other folders)
